--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,7 +1,15 @@
+// layout: 页面样式
+
 .page {
   width: 1px;
   height: 100%;
   position: relative;
+}
+
+.width-page {
+  width: calc(100vw - 150px);
+  height: 100%;
+  background: #F6F6F6;
 }
 
 .main-1-card {
@@ -48,4 +56,9 @@
 
 .mini-btn {
   padding: 3px 12px!important;
+}
+
+// 百度地图标识隐藏
+.anchorBL {
+  display: none!important;
 }
