--- a/src/styles/default.scss
+++ b/src/styles/default.scss
@@ -44,6 +44,10 @@ a {
   float: left;
 }
 
+.w-100 {
+  width: 100%;
+}
+
 .fz-10 {
   font-size: 10px;
 }
@@ -58,6 +62,10 @@ a {
 
 .fz-16 {
   font-size: 16px;
+}
+
+.fz-22 {
+  font-size: 22px;
 }
 
 .pl-5 {
@@ -78,6 +86,14 @@ a {
 
 .mt-10 {
   margin-top: 10px;
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
+
+.mt-25 {
+  margin-top: 25px;
 }
 
 .block {
