--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -15,3 +15,10 @@
 .el-form-item {
   margin-bottom: 10px!important;
 }
+
+.el-dialog {
+  border-radius: 5px!important;
+}
+.el-dialog__body {
+  padding: 5px 20px!important;
+}
