--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -7,9 +7,28 @@
 }
 
 .width-page {
+  padding: 20px;
   width: calc(100vw - 150px);
   height: 100%;
+  box-sizing: border-box;
+  overflow-y: scroll;
   background: #F6F6F6;
+}
+.page-title {
+  font-size: 16px;
+  font-weight: 600;
+}
+.page-content {
+  padding: 10px 10px 60px 10px;
+  position: relative;
+  .footer {
+    height: 60px;
+    line-height: 60px;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    left: 0;
+  }
 }
 
 .main-1-card {
