--- a/src/styles/default.scss
+++ b/src/styles/default.scss
@@ -80,6 +80,14 @@ a {
   padding-top: 5px;
 }
 
+.ml-5 {
+  margin-left: 5px;
+}
+
+.ml-10 {
+  margin-left: 10px;
+}
+
 .mt-5 {
   margin-top: 5px;
 }
