--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -14,6 +14,11 @@
   overflow-y: scroll;
   background: #F6F6F6;
 }
+.page-header {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 36px;
+}
 .page-title {
   font-size: 16px;
   font-weight: 600;
