--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -1,28 +1,43 @@
 // 覆盖Element - UI 样式
 
+//卡片
 .el-card__header , .el-card__body{
   padding: 12px 13px!important;
 }
-
 .el-card__body {
   height: calc(100% - 70px)!important;
 }
 
+//选择框
 .el-checkbox-group {
   font-size: 12px!important;
 }
 
+//表单
 .el-form-item {
   margin-bottom: 10px!important;
 }
 
+//弹窗
 .el-dialog {
   border-radius: 5px!important;
 }
 .el-dialog__body {
   padding: 5px 20px!important;
 }
+.el-message-box {
+  border-radius: 15px!important;
+}
 
+//分隔线
 .el-divider--horizontal {
   margin: 3px 0 !important;
+}
+
+//表格
+.el-table, .el-table__expanded-cell {
+  background-color: #F6F6F6!important;
+}
+.el-table th, .el-table tr {
+  background-color: #F6F6F6!important;
 }
